==> InamRehman-engr/service_alert_system/service-alerts-device/components/iotcore/hardware/sensors/heart_rate_monitor/max30102/max30102.c <==
#include "max30102.h"
#define MAX30102_INTSTAT1 = 0x00U
#define MAX30102_INTSTAT2 0x01U
#define MAX30102_INTENABLE1 0x02U
#define MAX30102_INTENABLE2 0x03U
#define MAX30102_FIFOWRITEPTR 0x04U
#define MAX30102_FIFOOVERFLOW 0x05U
#define MAX30102_FIFOREADPTR 0x06U
#define MAX30102_FIFODATA 0x07U
#define MAX30102_FIFOCONFIG 0x08U
#define MAX30102_MODECONFIG 0x09U
#define MAX30102_PARTICLECONFIG                                                \
  0x0AU // Note, sometimes listed as "SPO2" config in datasheet (pg. 11)
#define MAX30102_LED1_PULSEAMP 0x0CU
#define MAX30102_LED2_PULSEAMP 0x0DU
#define MAX30102_LED3_PULSEAMP 0x0EU
#define MAX30102_LED_PROX_AMP 0x10U
#define MAX30102_MULTILEDCONFIG1 0x11U
#define MAX30102_MULTILEDCONFIG2 0x12U
#define MAX30102_DIETEMPINT 0x1FU
#define MAX30102_DIETEMPFRAC 0x20U
#define MAX30102_DIETEMPCONFIG 0x21U
#define MAX30102_PROXINTTHRESH 0x30U
#define MAX30102_REVISIONID 0xFEU
#define MAX30102_PARTID 0xFFU // Should always be 0x15. Identical to MAX30102.
#define MAX30102_INT_A_FULL_MASK (uint8_t) ~0b10000000U
#define MAX30102_INT_A_FULL_ENABLE 0x80U
#define MAX30102_INT_A_FULL_DISABLE 0x00U
#define MAX30102_INT_DATA_RDY_MASK (uint8_t) ~0b01000000U
#define MAX30102_INT_DATA_RDY_ENABLE 0x40U
#define MAX30102_INT_DATA_RDY_DISABLE 0x00U
#define MAX30102_INT_ALC_OVF_MASK (uint8_t) ~0b00100000U
#define MAX30102_INT_ALC_OVF_ENABLE 0x20U
#define MAX30102_INT_ALC_OVF_DISABLE 0x00U
#define MAX30102_INT_PROX_INT_MASK (uint8_t) ~0b00010000U

void max30102_setup(uint8_t powerLevel, uint8_t sampleAverage, uint8_t ledMode,
                    int sampleRate, int pulseWidth, int adcRange) {
  max30102_softReset();
  // FIFO Configuration
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
  // The chip will average multiple samples of same type together if you wish
  if (sampleAverage == 1)
    setFIFOAverage(MAX30102_SAMPLEAVG_1); // No averaging per FIFO record
  else if (sampleAverage == 2)
    setFIFOAverage(MAX30102_SAMPLEAVG_2);
  else if (sampleAverage == 4) {
    setFIFOAverage(MAX30102_SAMPLEAVG_4);
  } else if (sampleAverage == 8)
    setFIFOAverage(MAX30102_SAMPLEAVG_8);
  else if (sampleAverage == 16)
    setFIFOAverage(MAX30102_SAMPLEAVG_16);
  else if (sampleAverage == 32)
    setFIFOAverage(MAX30102_SAMPLEAVG_32);
  else
    setFIFOAverage(MAX30102_SAMPLEAVG_4);
  enableFIFORollover();
  // Mode Configuration
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
  if (ledMode == 3)
    setLEDMode(MAX30102_MODE_MULTILED); // Watch all three LED channels
  else if (ledMode == 2)
    setLEDMode(MAX30102_MODE_REDIRONLY); // Red and IR
  else
    setLEDMode(MAX30102_MODE_REDONLY); // Red only
  activeLEDs = ledMode; // Used to control how many bytes to read from FIFO
                        // buffer Particle Sensing Configuration
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
  if (adcRange < 4096)
    setADCRange(MAX30102_ADCRANGE_2048); // 7.81pA per LSB
  else if (adcRange < 8192)
    setADCRange(MAX30102_ADCRANGE_4096); // 15.63pA per LSB
  else if (adcRange < 16384)
    setADCRange(MAX30102_ADCRANGE_8192); // 31.25pA per LSB
  else if (adcRange == 16384)
    setADCRange(MAX30102_ADCRANGE_16384); // 62.5pA per LSB
  else
    setADCRange(MAX30102_ADCRANGE_2048);

  if (sampleRate < 100)
    setSampleRate(MAX30102_SAMPLERATE_50); // Take 50 samples per second
  else if (sampleRate < 200)
    setSampleRate(MAX30102_SAMPLERATE_100);
  else if (sampleRate < 400)
    setSampleRate(MAX30102_SAMPLERATE_200);
  else if (sampleRate < 800)
    setSampleRate(MAX30102_SAMPLERATE_400);
  else if (sampleRate < 1000)
    setSampleRate(MAX30102_SAMPLERATE_800);
  else if (sampleRate < 1600)
    setSampleRate(MAX30102_SAMPLERATE_1000);
  else if (sampleRate < 3200)
    setSampleRate(MAX30102_SAMPLERATE_1600);
  else if (sampleRate == 3200)
    setSampleRate(MAX30102_SAMPLERATE_3200);
  else
    setSampleRate(MAX30102_SAMPLERATE_50);

  // The longer the pulse width the longer range of detection you'll have
  // At 69us and 0.4mA it's about 2 inches
  // At 411us and 0.4mA it's about 6 inches
  if (pulseWidth < 118)
    setPulseWidth(MAX30102_PULSEWIDTH_69); // Page 26, Gets us 15 bit resolution
  else if (pulseWidth < 215)
    setPulseWidth(MAX30102_PULSEWIDTH_118); // 16 bit resolution
  else if (pulseWidth < 411)
    setPulseWidth(MAX30102_PULSEWIDTH_215); // 17 bit resolution
  else if (pulseWidth == 411)
    setPulseWidth(MAX30102_PULSEWIDTH_411); // 18 bit resolution
  else
    setPulseWidth(MAX30102_PULSEWIDTH_69);
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

  // LED Pulse Amplitude Configuration
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
  // Default is 0x1F which gets us 6.4mA
  // powerLevel = 0x02, 0.4mA - Presence detection of ~4 inch
  // powerLevel = 0x1F, 6.4mA - Presence detection of ~8 inch
  // powerLevel = 0x7F, 25.4mA - Presence detection of ~8 inch
  // powerLevel = 0xFF, 50.0mA - Presence detection of ~12 inch

  setPulseAmplitudeRed(powerLevel);
  setPulseAmplitudeIR(powerLevel);
  setPulseAmplitudeGreen(powerLevel);
  setPulseAmplitudeProximity(powerLevel);
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

  // Multi-LED Mode Configuration, Enable the reading of the three LEDs
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
  enableSlot(1, SLOT_RED_LED);
  if (ledMode > 1)
    enableSlot(2, SLOT_IR_LED);
  if (ledMode > 2)
    enableSlot(3, SLOT_GREEN_LED);
  // enableSlot(1, SLOT_RED_PILOT);
  // enableSlot(2, SLOT_IR_PILOT);
  // enableSlot(3, SLOT_GREEN_PILOT);
  //-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

  clearFIFO(); // Reset the FIFO before we begin checking the sensor
  ESP_LOGI("MAX_INIT", "INIT SUCESSFUL");
}

void bitMask(uint8_t reg, uint8_t mask, uint8_t thing) {
  // Grab current register context
  uint8_t originalContents = 0;
  i2c_read(I2C_ADDR_MAX30102, reg, &originalContents, 1);
  // Zero-out the portions of the register we're interested in
  originalContents = originalContents & mask;

  // Change contents
  i2c_write(I2C_ADDR_MAX30102, reg, originalContents | thing);
}

void setPulseAmplitudeRed(uint8_t amplitude) {
  i2c_write(I2C_ADDR_MAX30102, MAX30102_LED1_PULSEAMP, amplitude);
}

void setPulseAmplitudeIR(uint8_t amplitude) {
  i2c_write(I2C_ADDR_MAX30102, MAX30102_LED2_PULSEAMP, amplitude);
}

void setPulseAmplitudeGreen(uint8_t amplitude) {
  i2c_write(I2C_ADDR_MAX30102, MAX30102_LED3_PULSEAMP, amplitude);
}

void setPulseAmplitudeProximity(uint8_t amplitude) {
  i2c_write(I2C_ADDR_MAX30102, MAX30102_LED_PROX_AMP, amplitude);
}

void enableSlot(uint8_t slotNumber, uint8_t device) {
  switch (slotNumber) {
  case (1):
    bitMask(MAX30102_MULTILEDCONFIG1, MAX30102_SLOT1_MASK, device);
    break;
  case (2):
    bitMask(MAX30102_MULTILEDCONFIG1, MAX30102_SLOT2_MASK, device << 4);
    break;
  case (3):
    bitMask(MAX30102_MULTILEDCONFIG2, MAX30102_SLOT3_MASK, device);
    break;
  case (4):
    bitMask(MAX30102_MULTILEDCONFIG2, MAX30102_SLOT4_MASK, device << 4);
    break;
  default:
    // Shouldn't be here!
    break;
  }
}

void clearFIFO(void) {
  i2c_write(I2C_ADDR_MAX30102, MAX30102_FIFOWRITEPTR, 0);
  i2c_write(I2C_ADDR_MAX30102, MAX30102_FIFOOVERFLOW, 0);
  i2c_write(I2C_ADDR_MAX30102, MAX30102_FIFOREADPTR, 0);
}

uint16_t check(void) {
  // Read register FIDO_DATA in (3-byte * number of active LED) chunks
  // Until FIFO_RD_PTR = FIFO_WR_PTR
  uint8_t regdata[256];
  uint8_t readPointer = getReadPointer();
  uint8_t writePointer = getWritePointer();

  int numberOfSamples = 0;
  int i = 0;
  // Do we have new data?
  if (readPointer != writePointer) {
    // Calculate the number of readings we need to get from sensor
    numberOfSamples = writePointer - readPointer;
    if (numberOfSamples < 0)
      numberOfSamples += 32; // Wrap condition

    // We now have the number of readings, now calc bytes to read
    // For this example we are just doing Red and IR (3 bytes each)
    int bytesLeftToRead = numberOfSamples * activeLEDs * 3;

    // We may need to read as many as 288 bytes so we read in blocks no larger
    // than I2C_BUFFER_LENGTH I2C_BUFFER_LENGTH changes based on the platform.
    // 64 bytes for SAMD21, 32 bytes for Uno. Wire.requestFrom() is limited to
    // BUFFER_LENGTH which is 32 on the Uno
    while (bytesLeftToRead > 0) {
      int toGet = bytesLeftToRead;
      if (toGet > I2C_BUFFER_LENGTH) {
        // If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6)
        // at a time 32 % 6 = 2 left over. We don't want to request 32 bytes, we
        // want to request 30. 32 % 9 (Red+IR+GREEN) = 5 left over. We want to
        // request 27.

        toGet =
            I2C_BUFFER_LENGTH -
            (I2C_BUFFER_LENGTH %
             (activeLEDs *
              3)); // Trim toGet to be a multiple of the samples we need to read
      }

      bytesLeftToRead -= toGet;

      // Request toGet number of bytes from sensor
      i2c_read(I2C_ADDR_MAX30102, MAX30102_FIFODATA, regdata, toGet);
      // ESP_LOG_BUFFER_HEXDUMP("Regdata=", regdata, toGet, ESP_LOG_INFO);
      while (toGet > 0) {
        sense.head++;               // Advance the head of the storage struct
        sense.head %= STORAGE_SIZE; // Wrap condition

        uint8_t temp[sizeof(
            uint32_t)]; // Array of 4 bytes that we will convert into long
        uint32_t tempLong;

        // Burst read three bytes - RED
        temp[3] = 0;
        temp[2] = regdata[i];
        temp[1] = regdata[i + 1];
        temp[0] = regdata[i + 2];

        // Convert array to long
        memcpy(&tempLong, temp, sizeof(tempLong));

        tempLong &= 0x3FFFF; // Zero out all but 18 bits
        printf("RED=%lld ", (long long)tempLong);
        sense.red[sense.head] =
            tempLong; // Store this reading into the sense array

        if (activeLEDs > 1) {
          // Burst read three more bytes - IR
          temp[3] = 0;
          temp[2] = regdata[i + 3];
          temp[1] = regdata[i + 4];
          temp[0] = regdata[i + 5];

          // Convert array to long
          memcpy(&tempLong, temp, sizeof(tempLong));

          tempLong &= 0x3FFFF; // Zero out all but 18 bits
          printf("IR=%lld\n", (long long)tempLong);
          sense.IR[sense.head] = tempLong;
        }

        toGet -= activeLEDs * 3;
        i += 3;
        vTaskDelay(10 / portTICK_PERIOD_MS);
        // printf("In to get\n");
      }
      vTaskDelay(10 / portTICK_PERIOD_MS);
    } // End while (bytesLeftToRead > 0)
      // printf("In to readPtr != writePtr\n");
  }   // End readPtr != writePtr

  return (numberOfSamples); // Let the world know how much new data we found
  printf("number of samples=%d", numberOfSamples);
}

uint8_t getWritePointer(void) {
  uint8_t wptr;
  i2c_read(I2C_ADDR_MAX30102, MAX30102_FIFOWRITEPTR, &wptr, 1);
  return wptr;
}

uint8_t getReadPointer(void) {
  uint8_t rptr;
  i2c_read(I2C_ADDR_MAX30102, MAX30102_FIFOREADPTR, &rptr, 1);
  return rptr;
}

bool safeCheck(uint8_t maxTimeToCheck) {
  uint32_t markTime = ((unsigned long)esp_timer_get_time()) / 1000;

  while (1) {
    if (((unsigned long)(esp_timer_get_time()) / 1000) - markTime >
        maxTimeToCheck)
      return (false);

    if (check() == true) // We found new data!
      return (true);

    vTaskDelay(1 / portTICK_PERIOD_MS);
  }
}
