==> rwardd/Kratos-Red/max30102/inc/MAX30102.c <==
#include "MAX30102.h"
#define MAX30102_MODE_MULTILED 0x07
#define MAX30102_ADDRESS_WRITE 0xAE
#define MAX30102_MODECONFIG 0x09
#define MAX30102_MODE_MASK 0xF8
#define MAX30102_DIETEMPCONFIG 0x21
#define MAX30102_ADDRESS 0x57
#define MAX30102_PARTID 0xFF
#define MAX30102_PARTID_VALUE 0x15
#define MAX30102_SHUTDOWN_MASK 0x7F
#define MAX30102_SHUTDOWN 0x80
#define MAX30102_WAKEUP 0x00
#define MAX30102_RESET_MASK 0xBF
#define MAX30102_RESET 0x40
#define MAX30102_FIFOCONFIG 0x08
#define MAX30102_SAMPLEAVG_MASK 0b00011111
#define MAX30102_SAMPLEAVG_4 0x40
#define MAX30102_SAMPLEAVG_1 0x00
#define MAX30102_ROLLOVER_MASK 0xEF
#define MAX30102_ROLLOVER_ENABLE 0x10
#define MAX30102_ROLLOVER_DISABLE 0x00
#define MAX30102_MODE_REDIRONLY 0x03
#define MAX30102_PARTICLECONFIG 0x0A
#define MAX30102_ADCRANGE_MASK 0x9F
#define MAX30102_ADCRANGE_4096 0x20
#define MAX30102_ADCRANGE_61384 0x60
#define MAX30102_SAMPLERATE_MASK 0xE3
#define MAX30102_SAMPLERATE_100 0x04
#define MAX30102_SAMPLERATE_400 0x0C
#define MAX30102_PULSEWIDTH_MASK 0xFC
#define MAX30102_PULSEWIDTH_411 0x03
#define MAX30102_LED1_PULSEAMP 0x0C
#define MAX30102_LED2_PULSEAMP 0x0D
#define MAX30102_LED3_PULSEAMP 0x0E
#define MAX30102_LED_PROX_AMP 0x10
#define MAX30102_MULTILEDCONFIG1 0x11
#define MAX30102_MULTILEDCONFIG2 0x12
#define MAX30105_SLOT1_MASK 0xF8
#define MAX30105_SLOT2_MASK 0x8F
#define SLOT_RED_LED 0x01
#define SLOT_IR_LED 0x02
#define MAX30102_FIFOREADPTR 0x06
#define MAX30102_FIFOWRITEPTR 0x04

void setPulseAmplitudeRed(const struct device* dev, uint8_t powerLevel) {
    if (i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_LED1_PULSEAMP, powerLevel)) {
        printk("Write failed :( \n");
    }
}

void setPulseAmplitudeIR(const struct device* dev, uint8_t powerLevel) {
    if (i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_LED2_PULSEAMP, powerLevel)) {
        printk("Write failed :( \n");
    }
}

void setPulseAmplitudeGreen(const struct device* dev, uint8_t powerLevel) {
    if (i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_LED3_PULSEAMP, powerLevel)) {
        printk("Write failed :( \n");
    }
}

void setPulseAmplitudeProximity(const struct device* dev, uint8_t powerLevel) {
    if (i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_LED_PROX_AMP, powerLevel)) {
        printk("Write failed :( \n");
    }
}

void enableSlot(const struct device* dev, uint8_t slot, uint8_t device) {
    switch (slot) {
    case (1):
        bitMask(dev, MAX30102_MULTILEDCONFIG1, MAX30105_SLOT1_MASK, device);
        break;
    case (2):
        bitMask(dev, MAX30102_MULTILEDCONFIG1, MAX30105_SLOT2_MASK, device << 4);
        break;
    default:
        //should never be here
        break;
    }

}

void clearFIFO(const struct device* dev) {
    int ret = i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_FIFOWRITEPTR, 0);
    ret += i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_FIFOOVERFLOW, 0);
    ret += i2c_reg_write_byte(dev, MAX30102_ADDRESS, MAX30102_FIFOREADPTR, 0);
    if (ret) {
        printk("Error clearing FIFO r/w pointers (ERR: %i)\n", ret);

    }

}

void MAX30102_setup(const struct device* dev) {
    uint8_t dummyVal;
    i2c_reg_read_byte(dev, MAX30102_ADDRESS, 0, &dummyVal);
    //softReset(dev);
    uint8_t ledBrightness = 36; //Options: 0=Off to 255=50mA
    uint8_t heartRateRedLED = 36;

    // uint8_t sampleAverage = 4; //Options: 1, 2, 4, 8, 16, 32
    // uint8_t ledMode = 2; //Options: 1 = Red only, 2 = Red + IR, 3 = Red + IR + Green
    // uint8_t sampleRate = 100; //Options: 50, 100, 200, 400, 800, 1000, 1600, 3200
    // int pulseWidth = 411; //Options: 69, 118, 215, 411
    // int adcRange = 4096; //Options: 2048, 4096, 8192, 16384
    maxim_max30102_init(dev);
    //     setFIFOAverage(dev, MAX30102_SAMPLEAVG_1);
    //     enableFIFORollover(dev);

    //     //     setInterrupts(dev);

    //    // configureFIFO(dev);

    //     setLEDMode(dev, MAX30102_MODE_REDIRONLY);
    //     activeLEDS = 2;
    //     setADCRange(dev, MAX30102_ADCRANGE_4096);
    //     setSampleRate(dev, MAX30102_SAMPLERATE_100);// < -SPO2
    // //    //     //setSampleRate(dev, MAX30102_SAMPLERATE_400); //<- Heart rate
    //     setPulseWidth(dev, MAX30102_PULSEWIDTH_411);
    //     setPulseAmplitudeRed(dev, heartRateRedLED);
    //     setPulseAmplitudeIR(dev, ledBrightness);
    //     enableSlot(dev, 1, SLOT_RED_LED);
    //     enableSlot(dev, 2, SLOT_IR_LED);
    //     clearFIFO(dev);


        //enableAFull(dev);
        //setFIFOAlmostFull(dev, 1);



}

uint8_t getReadPointer(const struct device* dev) {
    uint8_t rptr = 0;
    int ret = i2c_reg_read_byte(dev, MAX30102_ADDRESS, MAX30102_FIFOREADPTR, &rptr);
    if (ret) {
        printk("Failed to read device read pointer\n");
    }
    return rptr;
}

uint8_t getWritePointer(const struct device* dev) {
    uint8_t wptr = 0;
    int ret = i2c_reg_read_byte(dev, MAX30102_ADDRESS, MAX30102_FIFOWRITEPTR, &wptr);
    if (ret) {
        printk("Failed to read device write pointer\n");
    }
    return wptr;
}

uint8_t check(const struct device* dev) {
    uint8_t readPointer = getReadPointer(dev);
    uint8_t writePointer = getWritePointer(dev);

    int numberOfSamples = 0;

    if (readPointer != writePointer) {
        numberOfSamples = writePointer - readPointer;
        if (numberOfSamples < 0) numberOfSamples += 32; //Wrap condition
        int bytesLeftToRead = numberOfSamples * activeLEDS * 3;

        while (bytesLeftToRead > 0) {
            int toGet = bytesLeftToRead;
            if (toGet > I2C_BUFFER_LENGTH)
            {
                //If toGet is 32 this is bad because we read 6 bytes (Red+IR * 3 = 6) at a time
                //32 % 6 = 2 left over. We don't want to request 32 bytes, we want to request 30.
                //32 % 9 (Red+IR+GREEN) = 5 left over. We want to request 27.

                toGet = I2C_BUFFER_LENGTH - (I2C_BUFFER_LENGTH % (activeLEDS * 3)); //Trim toGet to be a multiple of the samples we need to read
            }

            bytesLeftToRead -= toGet;
            while (toGet > 0) {
                sense.head++;
                sense.head %= STORAGE_SIZE;
                readFIFO(dev);
                toGet -= activeLEDS * 3;
            }
        }



    }
    return 1;
}

bool safeCheck(const struct device* dev, uint8_t timeToCheck) {
    uint32_t markTime = k_uptime_get_32();

    while (1) {
        if ((k_uptime_get_32() - markTime) > timeToCheck) return false;
        if (check(dev) == true) {
            return true;

        }
        k_sleep(K_MSEC(1));
    }
}

void bitMask(const struct device* dev_i2c, uint8_t reg, uint8_t mask, uint8_t thing) {
    // Grab current register context
    uint8_t originalContents = 0;
    int ret = i2c_reg_read_byte(dev_i2c, MAX30102_ADDRESS, reg, &originalContents);

    if (ret) {
        printk("Unable to get og contents (err %i), ID: (%x)\n", ret, mask);

    }
    // Zero-out the portions of the register we're interested in
    originalContents = originalContents & mask;

    // Change contents
    ret = i2c_reg_write_byte(dev_i2c, MAX30102_ADDRESS, reg, originalContents | thing);
    if (ret) {
        printk("Unable to write (err %i)\n", ret);
    }
}
